[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/OptionsScreen/options_screen.png" type="Texture" id=1]
[ext_resource path="res://assets/OptionsScreen/volume_control.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/close_button.png" type="Texture" id=3]
[ext_resource path="res://assets/OptionsScreen/volume_background.png" type="Texture" id=4]
[ext_resource path="res://scripts/Options.gd" type="Script" id=5]
[ext_resource path="res://assets/Fonts/joystix_monospace_font.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 452, 83 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Options" type="PopupMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 195.0
margin_top = 136.0
margin_right = -276.0
margin_bottom = -146.0
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 404.438, 219.937 )
scale = Vector2( 0.537725, 0.457634 )
texture = ExtResource( 1 )

[node name="VolumeGrid" type="GridContainer" parent="."]
margin_left = 74.0
margin_top = 134.0
margin_right = 1126.0
margin_bottom = 219.0
rect_scale = Vector2( 0.6, 0.6 )
mouse_default_cursor_shape = 2
custom_constants/hseparation = 250
columns = 2

[node name="VolumeOptionLabel" type="Label" parent="VolumeGrid"]
margin_top = 6.0
margin_right = 350.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 5 )
text = "Volume:"

[node name="SliderMusic" type="HSlider" parent="VolumeGrid"]
margin_left = 600.0
margin_right = 1052.0
margin_bottom = 85.0
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = -40.0
max_value = 0.0

[node name="BackButton" type="Button" parent="."]
margin_left = 723.0
margin_top = 16.0
margin_right = 805.0
margin_bottom = 91.0
rect_scale = Vector2( 0.7, 0.7 )
icon = ExtResource( 3 )
flat = true

[connection signal="value_changed" from="VolumeGrid/SliderMusic" to="." method="_on_SliderMusic_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
